--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     margin: 0px;
 }
 
-#status {
+#status,
+#number_of_objects {
     font-size: 18px;
 }
 
@@ -16,4 +17,5 @@ body {
 canvas {
     box-shadow: 10px 10px 10px grey;
     border-radius: 10px;
+    margin-top: 30px;
 }
